CSS-Grids/Huff-Post/layout.css
/* Mobile first by default */
@charset "UTF-8";

@font-face {
    font-family: ProximaNovaregular;
    src: url("font/MARK\ SIMONSON\ -\ PROXIMA\ NOVA\ REGULAR.OTF") format("opentype");
}

@font-face {
    font-family: ProximaNovaLight;
    src: url("font/MARK\ SIMONSON\ -\ PROXIMA\ NOVA\ LIGHT.OTF") format("opentype");
}

@font-face {
    font-family: ProximaNovaBold;
    font-weight: bold;
    src: url("font/MARK\ SIMONSON\ -\ PROXIMA\ NOVA\ BOLD.OTF") format("opentype");
}

html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}
a:hover {
    cursor: pointer;
}
body {
	font-family: "ProximaNovaregular", Arial, Geneva, sans-serif;
	margin: 0px;
	padding: 0px;
}

/* Smartphones (portrait and landscape) ----------- */
@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {

    /* Our  Main Container */
    .container {
        height: auto;
        display: grid;
    }

    /* Navbar */
    .navbar {
        grid-row: 1 / 2;
        grid-column: 1 / -1;
        height: auto;
        background-color: black;
    }
    .nav-wrapper {
        display: grid;
        grid-template-columns: 3fr 8fr 3fr;
        grid-template-rows: 50px;
        grid-gap: 3px;

    }
    .menu-icn-wrapper {
        display: flex;
        justify-content: flex-start;
        align-items: center;
    }
    .menu-icn {
        color: #666666;
        width: 25px;
        font-size: 1em;
        padding-left: 1em;
    }
    .menu-icn:hover {
        color: #0DBE98;
        cursor: pointer;
    }
    .logo {
        display: flex;
        justify-content: center;
        align-items: center;
    }

    /* Main Logo */
    .logo img {
        height: 2em;
        width: 10em;
        display: block;
    }
    /* Toggle Icon for mobile */
    /* Social Icons */
    .social-icons {
        display: flex;
        justify-content: center;
        align-items: center;
    }
    .main-icn {
        display: none;
    }
    .language-selection {
        display: none;
    }
/* ------------------------------ */
    /* Main Section */
    .main-content-wrapper {
        grid-row: 2 / 8;
        grid-column: 1 / -1;
        /* Styling */
        background-size: cover;
        background-position: 50% 50%;
        width: 100%
    }
    .main-content-overlay {
        background-color: rgba(0,0,0,0.4);
        background: linear-gradient(to top, rgba(0,0,0,0.4), transparent 100%);
    }
    /* Main Section Headline H1 */
    .main-content-h1-w {
        text-align: center;
    }
    .main-content-h1 {
        font-family: "ProximaNovaBold", Arial, Geneva, sans-serif;
        color: white;
        font-size: 3rem;
        text-shadow: 0px 0px 10px rgba(0,0,0,0.5);
        margin-top: 4.5em;
    }
    .main-content-h1:hover {
        cursor: pointer;
        text-decoration: underline;
        text-decoration-color: #0DBE98;
    }

/* ------------------------------ */
    /* Section One - Left */
    .sec-1-left {
        grid-row: 8 / 14;
        grid-column: 1 / -1;
    }
    .top-title-box {
        padding: 1em;
        background-color: #ffffff;
    }
    .top-title-flag {
        font-style: italic;
        background: #F83371;
        color: #ffffff;
        display: flex;
        justify-content: center;
        align-items: center;
        height: 2em;
    }
    .top-title-flag h1 {
        padding: 0 15px;
        font-size: 1.0625rem;
        font-family: "ProximaNovaBold", Arial, Geneva, sans-serif;
        letter-spacing: 0.12em;
        padding-top: 3px;
    }
    .tp-main-card-img {
        max-width: 96px;
        height: 96px;
        justify-content: flex-start;
    }
    .tp-main-card-details {
        border-bottom: none;
    }
    .tp-main-card-link:hover {
        text-decoration: underline;
    }
    .tp-main-card-text {
        /* font-family: "ProximaNovaLight", Arial, Geneva, sans-serif; */
        margin-bottom: 1em;
    }
    .tp-small-cards-wrapper {
        padding: 0 0 0.5em 0;
    }
    .tp-small-card-img {
        margin-bottom: 1em;
    }
    .tp-main-card,
    .tp-small-card {
        display: flex;
        flex-direction: row;
        border-bottom: 0.8px solid #b6b6b6;
        margin: 1em;
    }
    .tp-small-card-link:hover {
        text-decoration: underline;
    }
    .tp-main-card-details,
    .tp-small-card-details {
        padding: 0 0.8em;
    }
/* ------------------------------ */
    /* Section Two - Center */
    .sec-2-center {
        grid-row: 14 / 16;
        grid-column: 1 / -1;
    }

    /* Section Three - Right */
    .sec-3-right {
        grid-row: 16 / 18;
        grid-column: 1 / -1;
    }
    .sec-4-right {
        grid-row: 18 / 21;
        grid-column: 1 / -1;
    }

    /* News Section */
    /* News Big Story */
    .news-big {
        grid-row: 21 / 23;
        grid-column: 1 / -1;
    }
    /* News story left */
    .news-left {
        grid-row: 23 / 25;
        grid-column: 1 / -1;
    }
    /* News story right */
    .news-right {
        grid-row: 25 / 27;
        grid-column: 1 / -1;
    }

    /* Trending Stories Section */
    .trending-stories {
        grid-row: 27 / 29;
        grid-column: 1 / -1;
    }

}



/* Small devices (tablets, 768px and up) */
@media (min-width: 550px) { 

}

/* Desktops and laptops ----------- */
@media only screen  and (min-width : 1224px) {

    /* Our  Main Container */
    .container {
        height: auto;
        display: grid;
        grid-gap: 0;
        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
        grid-auto-rows: 25%;
        grid-auto-flow: dense;
    }
/* ------------------------------- */
    /* Navbar */
    .navbar {
        grid-row: 1 / 2;
        grid-column: 1 / -1;
        /* height: 78px; */
        /* Navbar styling */
        height: auto;
        background-color: black;
        width: 100%;
        /* position: fixed; */
        top: 0;
        margin-bottom: 0;
        
    }
    .nav-wrapper {
        display: grid;
        grid-template-columns: 3fr 8fr 2fr 1fr;
        grid-template-rows: 78px;
        grid-gap: 3px;

    }
    .menu-icn-wrapper {
        display: flex;
        justify-content: flex-start;
        align-items: center;
    }
    .menu-icn {
        color: #666666;
        width: 25px;
        font-size: 1.75em;
        padding-left: 1em;
    }
    .menu-icn:hover {
        color: #0DBE98;
        cursor: pointer;
    }
    .logo {
        display: flex;
        justify-content: center;
        align-items: center;
    }
    .logo img {
        height: auto;
        width: 225px;
    }
    .social-icons {
        display: flex;
        justify-content: center;
        align-items: center;
    }
    .social-icons svg {
        margin: 0 5px 0 0;
    }
    /* Toggle icon off on mobile */
    .toggle-icn {
        display: none
    }
    .language-selection {
        display: flex;
        justify-content: flex-start;
        align-items: center;
    }
    .language-editions-text {
        color: white;
        font-size: 0.625rem;
        letter-spacing: 1.3px;
    }
    .language-editions-text:hover{
        color: #0DBE98;
        cursor: pointer;
    }
/* ------------------------------- */
    /* Main Section */
    /* Main Section background Image*/
    .main-content-wrapper {
        grid-row: 2 / 8;
        grid-column: 1 / -1;
        /* height: 480px; */
        /* Styling */
        background-size: cover;
        background-position: 50% 50%;
        height: 480px;
    }
    .main-content-overlay {
        background-color: rgba(0,0,0,0.4);
        background: linear-gradient(to bottom, rgba(0,0,0,0.4), transparent 100%);
    }
    /* Main Section Headline H1 */
    .main-content-h1-w {
        width: 980px;
        margin: 0 auto;
        text-align: center;
    }
    .main-content-h1 {
        font-family: "ProximaNovaBold", Arial, Geneva, sans-serif;
        color: white;
        font-size: 5.125rem;
        text-shadow: 0px 0px 10px rgba(0,0,0,0.5);
    }
    .main-content-h1:hover {
        cursor: pointer;
        text-decoration: underline;
        text-decoration-color: #0DBE98;
    }
/* ------------------------------- */
    /* Section One - Left */
    .sec-1-left {
        grid-row: 8 / 14;
        grid-column: 2 / 5;
        /* height: 680px; */
        /* Styling */
    }
    .top-title-box {
        padding: 1em;
        background-color: #ffffff;
    }
    .top-title-flag {
        font-style: italic;
        background: #F83371;
        color: #ffffff;
        display: flex;
        justify-content: center;
        align-items: center;
        height: 2em;
    }
    .top-title-flag h1 {
        padding: 0 15px;
        font-size: 1.0625rem;
        font-family: "ProximaNovaBold", Arial, Geneva, sans-serif;
        letter-spacing: 0.12em;
        padding-top: 3px;
    }
    .tp-main-card-img {
        max-width: 100%;
    }
    .tp-main-card-details {
        border-bottom: 0.8px solid #b6b6b6;
    }
    .tp-main-card-link:hover {
        text-decoration: underline;
    }
    .tp-main-card-text {
        /* font-family: "ProximaNovaLight", Arial, Geneva, sans-serif; */
        margin-bottom: 1em;
    }
    .tp-small-cards-wrapper {
        padding: 1.3rem 0;
    }
    .tp-small-card-img {
        margin-bottom: 1em;
    }
    .tp-small-card {
        display: flex;
        flex-direction: row;
        border-bottom: 0.8px solid #b6b6b6;
        margin-bottom: 1em;
    }
    .tp-small-card-link:hover {
        text-decoration: underline;
    }
    .tp-small-card-details {
        padding: 0 0.8em;
    }


/* ------------------------------- */
    /* Section Two - Center */
    .sec-2-center {
        grid-row: 8 / 15;
        grid-column: 5 / 12;
        height: 850px;
    }
    /* Huffing Post Zone Center */
    .hp-z-center {

    }
    .hp-z-center-box {
        padding: 1em;
    }
    .hp-z-center-img-wrapper {
    }
    .hp-z-center-img {
        max-width: 100%;
    }
    .hp-z-center-headline {

    }
    .hp-z-center-link {

    }
    .hp-z-center-text {
        font-family: "ProximaNovaBold", Arial, Geneva, sans-serif;
        font-size: 2.375rem;
        line-height: 2.375rem;
        letter-spacing: 0.5px;
    }
    /* HP Zone Center Details */
    .hp-z-center-details {

    }
    .hp-z-center-des {
        margin: 0.5em 0;
    }
    .hp-z-center-des-link {

    }
    .hp-z-center-des-text {
        font-family: "ProximaNovaLight", Arial, Geneva, sans-serif;
        font-size: 1.125rem;
        line-height: 1.375rem;
    }
    .hp-z-center-author{
        margin: 0.8em 0;
    }
    .hp-z-center-author-link{}
    .hp-z-center-author-text{
        color: #F83371;
        font-size: 0.8125rem;
        line-height: 0.9375rem;
        font-weight: normal;
    }

/* ------------------------------- */
    /* Section Three - Right */
    .sec-3-right {
        grid-row: 8 / 13;
        grid-column: 12 / 13;
        /* height: 550px; */
        /* background-color: #888888; */
    }
/* ------------------------------- */
    .sec-4-right {
        grid-row: 13 / 16;
        grid-column: 12 / 13;
        /* background-color: #424242; */
    }
/* ------------------------------- */

    /* News Section */
    /* News Big Story */
    .news-big {
        grid-row: 16 / 19;
        grid-column: 2 / 10;
    }
    /* News story left */
    .news-left {
        grid-row: 19 / 21;
        grid-column: 2 / 6;
    }
    /* News story right */
    .news-right {
        grid-row: 19 / 21;
        grid-column: 6 / 10;
    }

    /* Trending Stories Section */
    .trending-stories {
        grid-row: 16 / 21;
        grid-column: 10 / 13;
    }



} 

